# m-mrag-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  docker-compose.yml  main.py  pyproject.toml
backend/: __init__.py  agent_api.py  api.py  app.py  auth.py  cache.py  database.py  document_cleaner.py  document_loader.py  document_parser.py  embedding.py  image_retriever.py  milvus_client.py  milvus_writer.py  models.py  parent_chunk_store.py  rag_pipeline.py  rag_utils.py  rerank_server.py  schemas.py  sentence_buffer.py  stt_service.py  tools.py  tts_service.py  unity_agent_api.py  unity_api.py  unity_schemas.py  url_ingestor.py  vlm_client.py
data/documents/: 三身佛.docx  十二圆觉菩萨.docx  排水工程.docx  甬道采光设计.docx
frontend/: index.html  script.js  style.css
scripts/: cleanup_document_index.py  preview_clean_url.py
