[project]
name = "mragagent"
version = "0.1.0"
description = "多模态 RAG 智能体 — 面向文化遗产细粒度 POI 识别"
requires-python = ">=3.10"
dependencies = [
    # LLM & Agent
    "langchain>=1.0",
    "langchain-openai>=1.2",
    "langchain-community>=0.4",
    "langgraph>=1.2",
    "langgraph-checkpoint-sqlite>=3.1",
    "langsmith>=0.8",
    "aiosqlite>=0.22",
    # Database & Cache
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "redis>=8.0",
    # Vector DB
    "pymilvus>=3.0",
    # Embeddings
    "sentence-transformers>=5.5",
    "cn-clip==1.6.0",
    # Web Server
    "fastapi>=0.136",
    "uvicorn>=0.48",
    "python-multipart>=0.0.30",
    # Document Processing
    "pillow>=12.0",
    "pymupdf>=1.27",
    "python-docx>=1.2",
    "docx2txt>=0.9",
    # Utilities
    "python-dotenv>=1.2",
    "httpx-sse>=0.4",
]
